--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <label for="sequenceInput">Enter nucleotide sequence</label>
             <textarea id="sequenceInput" class="form-control" rows="4" placeholder="Enter nucleotide sequence"></textarea>
         </div>
-        <button class="btn btn-primary" onclick="editSequence()">Edit Sequence</button>
+        <button class="btn btn-primary" onclick="editSequence()">Convert Sequence</button>
         <div id="output" class="mt-3"></div>
     </div>
 
