--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IDE Annotation Converter</title>
+    <title>IDT Annotation Converter</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">IDE Annotation Converter</h1>
+        <h1 class="text-center">IDT Annotation Converter</h1>
         <div class="form-group">
             <label for="sequenceInput">Enter nucleotide sequence</label>
             <textarea id="sequenceInput" class="form-control" rows="4" placeholder="Enter nucleotide sequence"></textarea>
         </div>
-        <button class="btn btn-primary" onclick="editSequence()">Convert to IDE Sequence</button>
+        <button class="btn btn-primary" onclick="editSequence()">Convert to IDT Sequence</button>
         <div id="output" class="mt-3"></div>
     </div>
 
