--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
             <label for="sequenceInput">Enter nucleotide sequence</label>
             <textarea id="sequenceInput" class="form-control" rows="4" placeholder="Enter nucleotide sequence"></textarea>
         </div>
-        <button class="btn btn-primary" onclick="editSequence()">Convert to IDT Sequence</button>
+        <div class = "container">
+            <div class="row justify-content-between">
+                <button class="btn btn-primary" onclick="editSequence()">Convert to IDT Sequence</button>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Select ASO Type
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">2'MOE</a>
+                      <a class="dropdown-item" href="#">Gapmer</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="output" class="mt-3"></div>
     </div>
 
