--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                       Select ASO Type
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">2'MOE</a>
-                      <a class="dropdown-item" href="#">Gapmer</a>
+                      <a class="dropdown-item" href="#" data-value = "2'MOE">2'MOE</a>
+                      <a class="dropdown-item" href="#" data-value = "Gapmer">Gapmer</a>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
 
     <!-- Bootstrap and jQuery JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
