--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 </div>
             </div>
         </div>
-        <div id="output" class="mt-3"></div>
+        <div id="output" class="mt-3 border rounded">
+            <button id="copyButton" class="btn btn-secondary mt-2 d-none" onclick="copyTextToClipboard()">Copy to Clipboard</button>
+        </div>
     </div>
 
     <!-- Bootstrap and jQuery JS -->
