--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
                 </div>
             </div>
         </div>
-        <div id="output" class="mt-3 border rounded text-break">
-            <button id="copyButton" class="btn btn-secondary mt-2" onclick="copyTextToClipboard()">Copy to Clipboard</button>
-        </div>
+        <div id="output" class="mt-3 border rounded text-break"></div>
+        <button id="copyButton" class="btn btn-secondary mt-2 d-none" onclick="copyTextToClipboard()">Copy to Clipboard</button>
     </div>
 
     <!-- Bootstrap and jQuery JS -->
