--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
                 </div>
             </div>
         </div>
-        <div id="output" class="mt-3 border rounded text-break"></div>
-        <button id="copyButton" class="btn btn-secondary mt-2 d-none" onclick="copyTextToClipboard()">Copy to Clipboard</button>
+        <div id = "output-text" class = "form-group d-none"></div>
+            <label for="output">IDT annotated sequence: </label>
+            <div id="output" class="mt-3 border rounded text-break"></div>
+            <button id="copyButton" class="btn btn-secondary mt-2 d-none" onclick="copyTextToClipboard()">Copy to Clipboard</button>
+        </div>
     </div>
 
     <!-- Bootstrap and jQuery JS -->
