--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 </div>
             </div>
         </div>
-        <div id = "output-text" class = "form-group d-none"></div>
+        <div id = "output-text" class = "form-group"></div>
             <label for="output">IDT annotated sequence: </label>
-            <div id="output" class="mt-3 border rounded text-break"></div>
+            <div id="output" class="mt-3 border rounded text-break d-none"></div>
             <button id="copyButton" class="btn btn-secondary mt-2 d-none" onclick="copyTextToClipboard()">Copy to Clipboard</button>
         </div>
     </div>
