--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container mt-5">
         <h1 class="text-center">ASO Designer</h1>
         <div class="form-group">
-            <label for="sequenceInput">Enter nucleotide sequence</label>
-            <textarea id="sequenceInput" class="form-control" rows="4" placeholder="Enter nucleotide sequence"></textarea>
+            <label for="sequenceInput">Enter nucleotide sequence:</label>
+            <textarea id="sequenceInput" class="form-control" rows="4" placeholder="ACTGGTCA..."></textarea>
         </div>
         <div class = "container">
             <div class="row justify-content-end">
