--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div id = "output-text" class = "form-group"></div>
-            <label for="output">IDT annotated sequence: </label>
+            <label id = "outLabel" class="d-none" for="output">IDT annotated sequence: </label>
             <div id="output" class="mt-3 border rounded text-break d-none"></div>
             <button id="copyButton" class="btn btn-secondary mt-2 d-none" onclick="copyTextToClipboard()">Copy to Clipboard</button>
         </div>
