--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <div class="btn btn-secondary"  onclick="reverseComplement()">Reverse Complement</div>
             </div>
             <div class="row justify-content-start">
-                <button class="btn btn-primary" onclick="editSequence()">Convert to IDT Sequence</button>
+                <button class="btn btn-primary" onclick="editSequence()">Annotate Sequence</button>
             </div>
         </div>
         <div id = "output-text" class = "form-group"></div>
-            <label id = "outLabel" class="d-none" for="output">IDT annotated sequence: </label>
+            <label id = "outLabel" class="d-none" for="output">Annotated sequence: </label>
             <div id="output" class="mt-3 border rounded text-break d-none"></div>
             <button id="copyButton" class="btn btn-secondary mt-2 d-none" onclick="copyTextToClipboard()">Copy to Clipboard</button>
         </div>
